--- a/CS446Project/app/src/main/res/layout/song.xml
+++ b/CS446Project/app/src/main/res/layout/song.xml
@@ -18,13 +18,35 @@ each song, whereas I do not. -->
         android:src="@drawable/music" />
     
     <TextView
-        android:id="@+id/fileName"
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/file_name"
-        android:textSize="40sp"
+        android:text="@string/title"
+        android:textSize="15sp"
         android:textColor="#000000"
         android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/musicIcon"
+        android:layout_toEndOf="@+id/musicIcon" />
+
+    <TextView
+        android:id="@+id/artist"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/artist"
+        android:textSize="15sp"
+        android:textColor="#000000"
+        android:layout_below="@id/title"
+        android:layout_toRightOf="@+id/musicIcon"
+        android:layout_toEndOf="@+id/musicIcon" />
+
+    <TextView
+        android:id="@+id/album"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/album"
+        android:textSize="15sp"
+        android:textColor="#000000"
+        android:layout_below="@id/artist"
         android:layout_toRightOf="@+id/musicIcon"
         android:layout_toEndOf="@+id/musicIcon" />
 
@@ -32,7 +54,7 @@ each song, whereas I do not. -->
         android:id="@+id/songProgressBar"
         android:layout_width="275dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/fileName"
+        android:layout_below="@id/album"
         android:layout_toEndOf="@id/elapsedTime"
         android:layout_toRightOf="@id/elapsedTime"
         android:layout_marginStart="2dp"
@@ -45,7 +67,7 @@ each song, whereas I do not. -->
         android:id="@+id/elapsedTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/fileName"
+        android:layout_below="@id/album"
         android:layout_marginStart="5dp"
         android:layout_marginLeft="5dp"
         android:text="@string/time_placeholder"
@@ -58,9 +80,21 @@ each song, whereas I do not. -->
         android:layout_height="wrap_content"
         android:layout_toEndOf="@id/songProgressBar"
         android:layout_toRightOf="@id/songProgressBar"
-        android:layout_below="@id/fileName"
+        android:layout_below="@id/album"
         android:text="@string/time_placeholder"
         android:textSize="12sp"
+        android:textColor="#000000" />
+
+    <TextView
+        android:id="@+id/loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@id/artist"
+        android:layout_toRightOf="@id/artist"
+        android:layout_marginStart="200dp"
+        android:layout_marginLeft="200dp"
+        android:text="@string/loading"
+        android:textSize="15sp"
         android:textColor="#000000" />
 
 </RelativeLayout>
