Implemented Hari's suggestions

--- a/CS446Project/app/src/main/res/layout/host_music_player.xml
+++ b/CS446Project/app/src/main/res/layout/host_music_player.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,9 +19,10 @@
             android:id="@+id/playPauseButtons"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="15dp"
-            android:src="@drawable/play"
+            app:srcCompat="@android:drawable/ic_media_play"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:background="@android:color/black"
             android:onClick="onTogglePlay" />
 
         <ImageView
@@ -40,9 +42,10 @@
             android:layout_marginBottom="15dp"
             android:layout_toEndOf="@id/stopButton"
             android:layout_toRightOf="@id/stopButton"
-            android:src="@drawable/mute"
+            app:srcCompat="@android:drawable/ic_lock_silent_mode"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:background="@android:color/black"
             android:onClick="onToggleMute" />
 
         <Button
