--- a/CS446Project/app/src/main/res/layout/participant_music_player.xml
+++ b/CS446Project/app/src/main/res/layout/participant_music_player.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingBottom="5dp"
     android:paddingLeft="5dp"
     android:paddingRight="5dp"
@@ -18,9 +19,10 @@
             android:id="@+id/muteTogglingButton"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="15dp"
-            android:src="@drawable/mute"
+            app:srcCompat="@android:drawable/ic_lock_silent_mode"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:background="@android:color/black"
             android:onClick="onToggleMute" />
 
         <Button
