Added method that is called when user presses Join Session on home page.

--- a/CS446Project/app/src/main/res/layout/activity_main.xml
+++ b/CS446Project/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,8 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="51dp"
-        android:text="@string/join_session" />
+        android:text="@string/join_session"
+        android:onClick="onJoinSession"/>
 
     <Button
         android:id="@+id/buttonManagePlaylist"
