--- a/CS446Project/app/src/main/res/layout/activity_create_session.xml
+++ b/CS446Project/app/src/main/res/layout/activity_create_session.xml
@@ -51,6 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/select_playlist_to_upload_to_session"
         android:textStyle="bold"
