Completed communication functionality for the purposes of the demo. Signals being sent for play, pause, stop. Cleanup of code will be needed in future, as well as restructuring of the object for legibility. Functionality will need to be updated for future, more complex uses as well.

--- a/CS446Project/app/src/main/res/layout/activity_main.xml
+++ b/CS446Project/app/src/main/res/layout/activity_main.xml
@@ -4,18 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.qian.cs446project.MainActivity">
+    tools:context="com.example.qian.cs446project.MainActivity"
+    tools:layout_editor_absoluteY="81dp">
 
     <Button
         android:id="@+id/startServiceButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:onClick="initSession"
         android:text="Start Service"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -24,13 +25,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:onClick="findSession"
         android:text="Find Service"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/startServiceButton" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/startServiceButton"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/logBox"
@@ -51,12 +53,21 @@
         android:id="@+id/cleanUpButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="40dp"
         android:onClick="cleanUpSession"
         android:text="Clean Up"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/startServiceButton" />
+
+    <Button
+        android:id="@+id/sendSigButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:layout_marginTop="40dp"
+        android:onClick="sendSignals"
+        android:text="Send Sig"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/findServiceButton" />
 </android.support.constraint.ConstraintLayout>
