--- a/CS446Project/app/src/main/res/layout/activity_participant_music_player.xml
+++ b/CS446Project/app/src/main/res/layout/activity_participant_music_player.xml
@@ -23,7 +23,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:background="@android:color/black"
-            android:onClick="onToggleMute" />
+            android:onClick="muteUpdateGUINotifyService" />
 
         <Button
             android:id="@+id/buttonLeaveSession"
